# Game

./: .gitignore  CMakeLists.txt  GameState.h  GameStateMachine.cpp  GameStateMachine.h  game.cpp  game.h  main.cpp
Debug/: makefile  sources.mk  subdir.mk
Debug/GO/: subdir.mk
Debug/Graphics/: subdir.mk
Debug/Input/: subdir.mk
Debug/Logic/: subdir.mk
Debug/Math/: subdir.mk
Debug/Resources/: subdir.mk
Debug/States/: subdir.mk
Debug/Utils/: subdir.mk
ECS/: Component.h  Entity.cpp  Entity.h  ISystem.cpp  ISystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h
GO/: CMakeLists.txt  GameObject.cpp  GameObject.h  gameobject.cpp  gameobject.h
Graphics/: Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  Sprite.cpp  Sprite.h
Input/: InputHandler.cpp  InputHandler.h
Logic/: GameState.h  GameStateMachine.cpp  GameStateMachine.h
Math/: CMakeLists.txt  vector2.cpp  vector2.h
Physics/: PositionComponent.cpp  PositionComponent.h  VelocityComponent.cpp  VelocityComponent.h
Resources/: EntityManager.cpp  EntityManager.h  TextureManager.cpp  TextureManager.h
States/: GameState.h  GameStateMachine.cpp  GameStateMachine.h
Utils/: CMakeLists.txt  FileIO.cpp  FileIO.h  TextureManager.cpp  TextureManager.h  logger.cpp  logger.h  timer.cpp  timer.h
